--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   
   
 
-    <title>Mel Taylor Portfolio</title>
+    <title>Kayathiri Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
